--- a/src/posts/20250906-defrag-log-1.md
+++ b/src/posts/20250906-defrag-log-1.md
@@ -4,7 +4,7 @@ date: 2025-09-06
 keywords: ["defrag", "school"]
 ---
 
-Defragmentation began with a hard drive. Sectors shuffled into order. Shorter seeks. Higher throughput. I want the same for a life that is currently all head movement and no read/write.
+[Defragmentation](https://en.wikipedia.org/wiki/Defragmentation) began with a hard drive. Sectors shuffled into order. Shorter seeks. Higher throughput. I want the same for a life that is currently all head movement and no read/write.
 
 This series is my defrag. Small passes. Low-level format of routine and intent. No grand theory. Just moving blocks until the head stops thrashing.
 
