--- a/src/posts/20250906-defrag-log-1.md
+++ b/src/posts/20250906-defrag-log-1.md
@@ -14,7 +14,7 @@ So week one was about people, not tasks. I showed up to orientation after orient
 
 I almost committed to rowing again. Lake Union in Seattle was life changing. The morning fog. The erg’s bruise on the ribs. The useful ache. But 6:00 a.m. practices in the Charles River break the rest of the day. I'm sticking to my priority stack:
 
-```md
+```txt
 1. Health matters.
 2. Meeting people matters.
 3. Good work matters.
