--- a/src/posts/20250906-defrag-log-1.md
+++ b/src/posts/20250906-defrag-log-1.md
@@ -12,7 +12,7 @@ I started graduate school this week. Mid 30s at MIT after spending a decade in t
 
 So week one was about people, not tasks. I showed up to orientation after orientation. I avoid dry networking. I prefer activity. Shared oxygen. Hands on a thing. Meals eaten down to the last grain of rice while someone talks about their quantum physics research. Unlimited food for thought. Finally I'm no longer starving.
 
-I almost committed to rowing again. Lake Union in Seattle was life changing. The morning fog. The erg’s bruise on the ribs. The useful ache. But 6:00 a.m. practices in the Charles River break the rest of the day. I'm sticking to my priority stack:
+I almost committed to rowing again. Lake Union Crew in Seattle was life changing. The morning fog. The erg’s bruise on the ribs. The useful ache. But 6:00 a.m. practices in the Charles River break the rest of the day. I'm sticking to my priority stack:
 
 ```txt
 1. Health matters.
