--- a/src/posts/20250906-defrag-log-1.md
+++ b/src/posts/20250906-defrag-log-1.md
@@ -20,7 +20,7 @@ I almost committed to rowing again. Lake Union Crew in Seattle was life changing
 3. Good work matters.
 ```
 
-Rowing is a fine tribe, but static across a term. The dues stack up. The kit gets pricey. Early alarms erase evenings where friendships tend to grow. Not a one-way door if I try it in the next Summer. So I apologized to the captain for changing my mind and quit.
+Rowing is a fine tribe, but static across a term. The dues stack up. The kit gets pricey. Early alarms erase evenings where friendships tend to grow. Not a one-way door since I can try it in the next Summer. So I apologized to the captain for changing my mind and quit.
 
 I signed up for the Outing Club instead. They need a mountain biking trip leader, offer ski touring trips, and the social scene feels dynamic. Easy decision. I'm in.
 
