--- a/src/posts/20250906-defrag-log-1.md
+++ b/src/posts/20250906-defrag-log-1.md
@@ -20,19 +20,19 @@ I almost committed to rowing again. Lake Union Crew in Seattle was life changing
 3. Good work matters.
 ```
 
-Rowing is a fine tribe, but static across a term. The dues stack up. The kit gets pricey. Early alarms erase evenings where friendships tend to grow. Not a one-way door since I can try it in the next Summer. So I apologized to the captain for changing my mind and quit.
+Rowing is a fine tribe, but static across a term. The dues stack up. The kit gets pricey. Early alarms erase evenings where friendships tend to grow. Not a one-way door because I can try it in the next Summer. So I apologized to the captain for changing my mind and quit.
 
 I signed up for the Outing Club instead. They need a mountain biking trip leader, offer ski touring trips, and the social scene feels dynamic. Easy decision. I'm in.
 
 Automation also got a pass this week. One-time investiment for compound interest.
 - Outlook filters so I can handle emails in bulk. Been there done that with Microsoft.
 - Calendar mirroring across Google and Outlook. But seriously why would Media Lab and MIT choose separate email providers?
-- Experimenting with using GitHub project as kanban for school matters. The long bet is a machine interface to my errands. Actions. Agents. Efficient automaton.
+- Experimenting with [GitHub Projects](https://docs.github.com/en/issues/planning-and-tracking-with-projects/learning-about-projects/about-projects) as a kanban for school matters. The long bet is a machine interface to my errands: actions, agents, GraphQL, it's going to be my third brain in addition to my [second](https://osmoscraft.org/).
 
 That's it. Next week is for habit building. I want a repeatable routine but not too rigid:
 - Early morning for gym, running, or erging.
 - Breakfast in the apartment followed by a study hour. I need the clear mind for reading dense papers.
-- Class, lab, collaboration throughout the day.
+- Class, lab, meetings throughout the day.
 - Lunch and dinner with friends.
 - Deep coding while the city thins out.
 
