--- a/src/posts/20250906-defrag-log-1.md
+++ b/src/posts/20250906-defrag-log-1.md
@@ -29,7 +29,7 @@ Automation also got a pass this week. One-time investiment for compound interest
 - Calendar mirroring across Google and Outlook. But seriously why would Media Lab and MIT choose separate email providers?
 - Experimenting with [GitHub Projects](https://docs.github.com/en/issues/planning-and-tracking-with-projects/learning-about-projects/about-projects) as a kanban for school matters. The long bet is a machine interface to my errands: actions, agents, GraphQL, it's going to be my third brain in addition to my [second](https://osmoscraft.org/).
 
-That's it. Next week is for habit building. I want a repeatable routine but not too rigid:
+That's it. Next week is for habit building. I want a repeatable [routine](https://utsavmamoria.substack.com/p/how-to-live-an-intellectually-rich) but not too rigid:
 - Early morning for gym, running, or erging.
 - Breakfast in the apartment followed by a study hour. I need the clear mind for reading dense papers.
 - Class, lab, meetings throughout the day.
