--- a/src/posts/20251203-ease-trap.md
+++ b/src/posts/20251203-ease-trap.md
@@ -6,7 +6,7 @@ keywords: ["philosophy", "ai", "programming"]
 
 I had been building many tools with AI. The kind of weekend projects that used to take me a few days of focused work. The AI gave me working prototypes in an hour. I felt triumphant. Then I tried to add a feature. The code fought back. Every change I made broke something else, and the AI's fixes introduced new entanglements. A dozen prompts in, I was staring at a codebase I no longer understood.
 
-> Change should become easier over time in a well-engineered project.
+Change should become easier over time in a well-engineered project.
 
 When we talk about AI coding, we usually talk about velocity. But we rarely talk about the topology of the effort. How does the shape of our struggle change over time?
 
