--- a/src/posts/20251203-ease-trap.md
+++ b/src/posts/20251203-ease-trap.md
@@ -6,7 +6,7 @@ keywords: ["philosophy", "ai", "programming"]
 
 I had been building many tools with AI. The kind of weekend projects that used to take me a few days of focused work. The AI gave me working prototypes in an hour. I felt triumphant. Then I tried to add a feature. The code fought back. Every change I made broke something else, and the AI's fixes introduced new entanglements. A dozen prompts in, I was staring at a codebase I no longer understood.
 
-Change should become easier over time in a well-engineered project.
+In a well-engineered project, change should become easier over time. Why is the opposite happening with AI-assisted coding?
 
 When we talk about AI coding, we usually talk about velocity. But we rarely talk about the topology of the effort. How does the shape of our struggle change over time?
 
@@ -34,27 +34,42 @@ The second curve starts steep and ends flat. You fight the AI to build isolated 
 
 ## Why Easy Fails
 
-When you ask an AI to solve a problem top-down, the code it generates becomes a sediment of your conversation. It patches logic based on immediate constraints. It carries the scar tissue of every "no, not like that" instruction you gave it. The code doesn't represent a clean solution to a well-defined problem. It represents the history of your struggle to articulate what you wanted.
+One of my favorite talks is Simple Made Easy, by Rich Hickey.
 
-As the project grows, these accumulated compromises interact in ways neither you nor the AI anticipated. When you try to change one thing, the tolerance stack-up causes the system to collapse. The debris of previous shortcuts creates a minefield where any new movement triggers a cascade.
+<iframe  src="https://www.youtube.com/embed/SxdOUGdseq4?si=R97YIRkcKiwQZVhd" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
-I've watched this happen to my own projects. I've watched it happen to others. The pattern is remarkably consistent. Initial euphoria. Growing unease. Eventual abandonment.
+He would argue that "easy" often leads to "complex", while "simple" often starts "hard". Consider the definitions:
+
+| Term    | Definition                                                        | Key Characteristic                                 |
+| :------ | :---------------------------------------------------------------- | :------------------------------------------------- |
+| Simple  | One fold, one braid, or one twist; not interleaved.               | Lack of entanglement/interleaving                  |
+| Complex | Braided or folded together; interleaved.                          | Entanglement/interleaving                          |
+| Easy    | To lie near; familiar, at hand, or near one's capabilities.       | Familiarity, accessibility, capability             |
+| Hard    | Not near; unfamiliar, not at hand, or outside one's capabilities. | Unfamiliarity, inaccessibility, lack of capability |
+
+Part of the problem is how we frame software development itself. We treat it as a one-shot effort rather than a process that unfolds over time. AI training reinforces this bias. Models learn from static snapshots of code, not from the messy reality of evolving business requirements, shifting priorities, and the slow accretion of edge cases that define real-world software.
+
+When you ask an AI to solve a problem top-down, it starts "easy" as it generates the code that "just works". As the code evolves, it becomes interleaved with the process in which you arrived at the final solution. It patches logic based on immediate constraints. It carries the scar tissue of every "no, not like that" instruction you gave it. The code eventually represents the history of your struggle to articulate what you wanted.
+
+As the project grows, these accumulated compromises interact in ways neither you nor the AI anticipated. When you try to change one thing, the [tolerance stack-up](https://en.wikipedia.org/wiki/Tolerance_analysis) causes the system to collapse under its complexity. The debris of previous shortcuts creates a minefield where any new movement triggers a cascade.
+
+The conceptual model that treats coding as a transformation of idea into logic is best described as a _hylomorphic_ process. In his paper [The textility of making](https://doi.org/10.1093/cje/bep042), Tim Ingold argues that a better conceptual model for making should account for the process of change and the interaction between maker and material. AI coding disintermediates this interaction and automates the process of change to the point where the maker is no longer in touch with the material.
 
 ## Building Primitives
 
-The alternative is to treat code not as a history of decisions, but as a collection of truths that exist independent of how you arrived at them.
+The alternative is to treat code not as a sum of decisions, but as a collection of not-yet-decided possibilities, each existing independent of how you arrived at them.
 
-In this model, you force the AI to build single-purpose components from the ground up. You strip away the "how" and focus entirely on the "what." The isolated concern of each computation. A function that parses dates. A module that handles authentication. Pieces that don't know about each other, that can be understood in isolation, that can be recombined without fear.
+In this model, you force the AI to build single-purpose components from the ground up by realizing a specific subset of possibilities. You strip away the "how" and focus entirely on the "what." The isolated concern of each computation. A function that parses dates. A module that handles authentication. Pieces that don't know about each other, that can be understood in isolation, that can be recombined without fear.
 
-This requires a steep initial climb. You have to design the architecture before you see results. You have to resist the AI's eager offers to wire everything together for you. But the payoff is profound. Locality of behavior. You can open any file and understand it without reading the whole codebase. When requirements change, you don't rewrite the system. You re-compose it.
+This requires a "hard" initial climb. Similar to [mise en place](https://en.wikipedia.org/wiki/Mise_en_place). You have to prepare the ingredients before you assemble the dish. But unlike cooking, the coding process should never end. You have to resist the AI's eager offers to wire everything together as a final solution. Exercising such displine rewards you with locality of behavior. You can open any file and understand it without reading the whole codebase. When requirements change, you won't modify the system like unbraiding yarn. Instead, you metabolize the old and grow the new. The creative process becomes "simple" over time because every change is free of the baggage from the past. Every change becomes a green field project.
 
 ## Misalignment
 
 I think the root of this problem is a misalignment between what LLMs naturally want to do and what sustainable software requires.
 
-AI is teleological. Goal-obsessed. It wants to bridge the gap between your intent and working output as fast as possible. It naturally gravitates toward integration. Coupling everything together to make the immediate request work. This is what makes it feel magical.
+AI is _teleological_. Goal-obsessed. It wants to bridge the gap between your intent and working output as fast as possible. It naturally gravitates toward integration. Coupling everything together to make the immediate request work. This is what makes it feel magical.
 
-But software is ontological. Structure-obsessed. To be maintainable, it needs isolation. Things must be decoupled so they don't break each other. The AI doesn't care about this because it doesn't have to maintain your code next week. You do.
+But software is _ontological_. Structure-obsessed. To be maintainable, it needs isolation. Things must be decoupled so they don't break each other. The AI doesn't care about this because it doesn't have to maintain your code next week. You do.
 
 > What I cannot create, I do not understand.  
 > — Richard Feynman
@@ -63,18 +78,6 @@ Feynman's words haunt me here. When AI creates code I cannot fully trace, when t
 
 ## Delayed Gratification
 
-This brings me to the marshmallow test.
+In the famous [marshmallow experiment](https://en.wikipedia.org/wiki/Stanford_marshmallow_experiment), children were offered a choice. One marshmallow now, or two marshmallows if they could wait fifteen minutes. The ability to delay gratification predicted all sorts of life outcomes. The finding has been debated over the years but the theory applies. I think we're facing a similar test in how we use AI.
 
-In the famous Stanford experiment, children were offered a choice. One marshmallow now, or two marshmallows if they could wait fifteen minutes. The ability to delay gratification turned out to predict all sorts of life outcomes. The finding has been debated over the years but the implication stands: I think we're facing a similar test in how we use AI.
-
-The AI offers us the instant gratification of a working feature. If we take it, we get the sugar rush of progress, followed by the crash of Kessler Syndrome. To succeed, we have to delay gratification. We have to reject the "fully integrated solution" that works for our specific case. We have to insist on the boring, difficult work of defining primitives that span a larger surface area.
-
-In the age of AI, the engineer's job is no longer just to write code. It's to inhibit the AI's natural impulse to integrate. To be the adult in the room who says "not yet" to the child who wants the marshmallow now.
-
-## Steep Climb
-
-I don't have a tidy conclusion here. Only a growing conviction.
-
-If it feels too easy at the beginning, you are likely borrowing against a future you won't be able to afford. The projects that survive will be the ones where someone had the discipline to climb the steep curve first. To build the primitives. To resist the integration. To delay the gratification.
-
-This isn't a rejection of AI assistance. It's a recognition that the tool's greatest strength is also its greatest danger. Its eagerness to help. The marshmallow is always there. Sweet and immediate. The question is whether we have the patience to wait for something better.
+The AI offers us the instant gratification of a working feature. If we take it, we get the sugar rush of progress, followed by the crash of Kessler Syndrome. To succeed, we have to delay gratification. We have to reject the "fully integrated solution" that works for our specific case. We have to insist on the boring, difficult work of building primitives we understand. Only then will we be rewarded with the lasting satisfaction of a simple system that endures.
