--- a/src/posts/20251203-ease-trap.md
+++ b/src/posts/20251203-ease-trap.md
@@ -22,11 +22,11 @@ But this approach is a trap. I diagnosed the end state with [Kessler Syndrome](.
 
 There are two ways to use AI, and they produce opposite effort curves.
 
-|                  | Top-down approach  | Bottom-up approach |
-| ---------------- | ------------------ | ------------------ |
-| Start            | Easy               | Hard               |
-| End              | Hard               | Easy               |
-| Complexity trend | Exponential growth | Flatten            |
+|              | Top-down approach  | Bottom-up approach |
+| ------------ | ------------------ | ------------------ |
+| Start        | Easy               | Hard               |
+| End          | Hard               | Easy               |
+| Effort trend | Exponential growth | Flatten            |
 
 The first curve starts flat and ends vertical. You give the AI a high-level goal, and it gives you a solution. It's fast. Intoxicating even. But as you iterate, each change requires more context, more explanation, more correction. The effort climbs until progress halts entirely. I think of this as the mortgage curve. You're making deals with your future self, borrowing time you'll eventually have to repay with interest.
 
