--- a/src/posts/20251203-ease-trap.md
+++ b/src/posts/20251203-ease-trap.md
@@ -1,5 +1,5 @@
 ---
-title: Ease Trap
+title: Escape the Easy Trap
 date: 2025-12-03
 keywords: ["philosophy", "ai", "programming"]
 ---
@@ -53,15 +53,17 @@ When you ask an AI to solve a problem top-down, it starts "easy" as it generates
 
 As the project grows, these accumulated compromises interact in ways neither you nor the AI anticipated. When you try to change one thing, the [tolerance stack-up](https://en.wikipedia.org/wiki/Tolerance_analysis) causes the system to collapse under its complexity. The debris of previous shortcuts creates a minefield where any new movement triggers a cascade.
 
-The conceptual model that treats coding as a transformation of idea into logic is best described as a _hylomorphic_ process. In his paper [The textility of making](https://doi.org/10.1093/cje/bep042), Tim Ingold argues that a better conceptual model for making should account for the process of change and the interaction between maker and material. AI coding disintermediates this interaction and automates the process of change to the point where the maker is no longer in touch with the material.
+The conceptual model that treats coding as a transformation of idea into logic is best described as a _hylomorphic_ process. In his paper, [The textility of making](https://doi.org/10.1093/cje/bep042), Tim Ingold argues that a better conceptual model for making should account for the process of change and the interaction between maker and material. Top-down AI coding automates the process and disintermediates the interaction to the point where the maker is no longer in touch with the material.
 
-## Building Primitives
+## Future-driven development
 
-The alternative is to treat code not as a sum of decisions, but as a collection of not-yet-decided possibilities, each existing independent of how you arrived at them.
+The alternative is to treat code not as a sum of decisions, but as a collection of not-yet-decided possibilities, each existing independent of how you arrived at them and yet showing a path to how they might be used in the future.
+
+I call this _future-driven development_.
 
 In this model, you force the AI to build single-purpose components from the ground up by realizing a specific subset of possibilities. You strip away the "how" and focus entirely on the "what." The isolated concern of each computation. A function that parses dates. A module that handles authentication. Pieces that don't know about each other, that can be understood in isolation, that can be recombined without fear.
 
-This requires a "hard" initial climb. Similar to [mise en place](https://en.wikipedia.org/wiki/Mise_en_place). You have to prepare the ingredients before you assemble the dish. But unlike cooking, the coding process should never end. You have to resist the AI's eager offers to wire everything together as a final solution. Exercising such displine rewards you with locality of behavior. You can open any file and understand it without reading the whole codebase. When requirements change, you won't modify the system like unbraiding yarn. Instead, you metabolize the old and grow the new. The creative process becomes "simple" over time because every change is free of the baggage from the past. Every change becomes a green field project.
+This requires a "hard" initial climb. Similar to [mise en place](https://en.wikipedia.org/wiki/Mise_en_place). You have to prepare the ingredients before you assemble the dish. But unlike cooking, the coding process should never end. You have to resist the AI's eager offers to wire everything together as a fossilized solution. Exercising such discipline rewards you with locality of behavior. You can open any file and understand it without reading the whole codebase. When requirements change, you won't modify the system like unbraiding yarn. Instead, you metabolize the old and grow the new. The creative process becomes "simple" over time because every change is free of the baggage from the past. Every change becomes a green field project. Every component _wants_ to settle into a new home.
 
 ## Misalignment
 
@@ -74,10 +76,12 @@ But software is _ontological_. Structure-obsessed. To be maintainable, it needs 
 > What I cannot create, I do not understand.  
 > — Richard Feynman
 
-Feynman's words haunt me here. When AI creates code I cannot fully trace, when the solution arrives faster than my comprehension, something essential is lost. Not just understanding, but the capacity to care for what I've made.
+Feynman's words haunt me here. When AI creates code I cannot fully trace, when the solution arrives [faster than my comprehension](./20251010-porcelain-to-come.md), we lose the capacity to care for what we've made.
+
+Making without caring erodes our purpose. What would a chef, teacher, or parent be if their identity isn't grounded in the responsibility of care? A programmer who doesn't care for their creation is a soulless operator of symbols. A job that AI will gladly take over.
 
 ## Delayed Gratification
 
-In the famous [marshmallow experiment](https://en.wikipedia.org/wiki/Stanford_marshmallow_experiment), children were offered a choice. One marshmallow now, or two marshmallows if they could wait fifteen minutes. The ability to delay gratification predicted all sorts of life outcomes. The finding has been debated over the years but the theory applies. I think we're facing a similar test in how we use AI.
+In the famous [marshmallow experiment](https://en.wikipedia.org/wiki/Stanford_marshmallow_experiment), children were offered a choice. One marshmallow now, or two marshmallows if they could wait fifteen minutes. The ability to delay gratification predicted all sorts of life outcomes. The finding has been debated over the years but the theory is relevant here and now. We're facing a similar test in how we use AI.
 
-The AI offers us the instant gratification of a working feature. If we take it, we get the sugar rush of progress, followed by the crash of Kessler Syndrome. To succeed, we have to delay gratification. We have to reject the "fully integrated solution" that works for our specific case. We have to insist on the boring, difficult work of building primitives we understand. Only then will we be rewarded with the lasting satisfaction of a simple system that endures.
+The AI offers us the instant gratification of a working feature. If we take it, we get the sugar rush of progress, followed by the crash of Kessler Syndrome. To succeed, we have to delay gratification. We have to reject the "fully integrated solution" that works for our specific case. We have to insist on the boring, difficult work of not only building primitives, but maintaining their possibilities for future use as well as our understanding of their potentials. Only then will we be rewarded with the lasting satisfaction of a simple system that endures.
