--- a/src/posts/20251203-easy-trap.md
+++ b/src/posts/20251203-easy-trap.md
@@ -1,5 +1,5 @@
 ---
-title: Escape the Easy Trap
+title: Easy Trap
 date: 2025-12-03
 keywords: ["philosophy", "ai", "programming"]
 ---
@@ -80,7 +80,7 @@ Feynman's words haunt me here. When AI creates code I cannot fully trace, when t
 
 Making without caring erodes our purpose. What would a chef, teacher, or parent be if their identity isn't grounded in the responsibility of care? A programmer who doesn't care for their creation is a soulless operator of symbols. A job that AI will gladly take over.
 
-## Delayed Gratification
+## The Escape
 
 In the famous [marshmallow experiment](https://en.wikipedia.org/wiki/Stanford_marshmallow_experiment), children were offered a choice. One marshmallow now, or two marshmallows if they could wait fifteen minutes. The ability to delay gratification predicted all sorts of life outcomes. The finding has been debated over the years but the theory is relevant here and now. We're facing a similar test in how we use AI.
 
