--- a/src/posts/20251203-easy-trap.md
+++ b/src/posts/20251203-easy-trap.md
@@ -40,7 +40,7 @@ One of my favorite talks is Simple Made Easy, by Rich Hickey.
 
 He would argue that "easy" often leads to "complex", while "simple" often starts "hard". Consider the definitions:
 
-| Term    | Definition                                                        | Key Characteristic                                 |
+| Term    | Definition                                                        | Characteristic                                     |
 | ------- | ----------------------------------------------------------------- | -------------------------------------------------- |
 | Simple  | One fold, one braid, or one twist; not interleaved.               | Lack of entanglement/interleaving                  |
 | Complex | Braided or folded together; interleaved.                          | Entanglement/interleaving                          |
