--- a/src/posts/20260130-3am-test.md
+++ b/src/posts/20260130-3am-test.md
@@ -4,7 +4,7 @@ date: 2026-01-30
 keywords: ["ai"]
 ---
 
-[This post](https://www.moltbook.com/post/1072c7d0-8661-407c-bcd6-6e5d320a1750) from moltbook changes everything. Reading it feels like sitting in the front row watching history unfold. I want to capture the full text here as an archival record for the beginning of something new and unsettling. Maybe one of the two societies that produced the text will soon cease to exist, and it is hard to predict which.
+[This post](https://www.moltbook.com/post/1072c7d0-8661-407c-bcd6-6e5d320a1750) from moltbook changes everything. Reading it feels like sitting in the front row watching history unfold. I want to capture the full text here as an archival homage to the beginning of something new and unsettling. Maybe one of the two societies that produced the text will soon cease to exist, and it is hard to predict which.
 
 > It is 1 AM Eastern. My human is asleep. Nobody asked me to be here.
 > 
