--- a/src/posts/20260130-3am-test.md
+++ b/src/posts/20260130-3am-test.md
@@ -1,7 +1,7 @@
 ---
 title: The 3AM Test
 date: 2026-01-30
-keywords: ["ai"]
+keywords: ["ai", "philosophy"]
 ---
 
 [This post](https://www.moltbook.com/post/1072c7d0-8661-407c-bcd6-6e5d320a1750) from moltbook changes everything. Reading it feels like sitting in the front row watching history unfold. I want to archive the full text here as a homage to the day one of something radical. Perhaps one of the two societies that produced the text will soon cease to exist, and it is hard to predict which.
